# Routes/auth_route.js
@@ -14,7 +14,7 @@ router.route("/signup").post(signup);
 router.route("/login").post(login);
 router.route("/verify").post(verifyotp);
 router.route("/logout").post(verifyToken, logout);
-router.route("/disable/account").delete(verifyToken, disable);
-router.route("/edit/account").put(verifyToken, editAcc);
-router.route("/delete/account").delete(verifyToken, delAcc);
+router.route("/disable").delete(verifyToken, disable);
+router.route("/edit").put(verifyToken, editAcc);
+router.route("/account").delete(verifyToken, delAcc);
 module.exports = router;
