# index.js
@@ -17,9 +17,9 @@ app.get("/", (req, res) => {
   res.send("welcome to the first page of the site");
 });
 
-app.use("/api/auth", authRouter);
-app.use("/api/task", taskRouter);
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDoc));
+app.use("/user", authRouter);
+app.use("/task", taskRouter);
+app.use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerDoc));
 app.listen(PORT, () => {
   logger.info(`app is listening on ${PORT}`);
 });
